GRUD first task

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -3,4 +3,7 @@
     <string name="app_name">НМедиа</string>
     <string name="nmedia">НМедиа!</string>
     <string name="messageDate">5 novemb:er 17:10</string>
+    <string name="remove">Удалить</string>
+    <string name="error_message">Не может быть пустым</string>
+    <string name="edit">Изменить</string>
 </resources>
