--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -6,4 +6,5 @@
     <string name="remove">Удалить</string>
     <string name="error_message">Не может быть пустым</string>
     <string name="edit">Изменить</string>
+    <string name="edit_message">Сообщение</string>
 </resources>
