--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,7 @@
     <string name="video_image" translatable="false">Video image</string>
     <string name="play_button" translatable="false">Play button</string>
     <string name="savebutton" translatable="false">SaveButton</string>
+    <string name="channel_remote_name">Server notification</string>
+    <string name="channel_remote_description">Notification from remote server</string>
+    <string name="notification_user_liked" translatable="false">User %1$s liked %2$s\'s post</string>
 </resources>
