--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,5 +24,6 @@
     <string name="savebutton" translatable="false">SaveButton</string>
     <string name="channel_remote_name">Server notification</string>
     <string name="channel_remote_description">Notification from remote server</string>
-    <string name="notification_user_liked" translatable="false">User %1$s liked %2$s\'s post</string>
+    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
+    <string name="notification_new_post">User %1$s add post</string>
 </resources>
