--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,7 @@
     <string name="channel_remote_description">Notification from remote server</string>
     <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
     <string name="notification_new_post">User %1$s add post</string>
+    <string name="empty">Empty</string>
+    <string name="error_text">Something went wrong</string>
+    <string name="retry">RETRY</string>
 </resources>
